--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -555,8 +555,10 @@ plot(ippi_ts, main = 'Ippi - Monthly data')
 #Raw Materials
 ts(raw_materials_pi$VALUE, start = c(1997,01), end = c(2019,10), frequency = 12) -> raw_materials_ts
 plot(raw_materials_ts, main = 'Raw Materials - Monthly data')
+```
 
 
+```{r}
 #Trying to merge importsTs to original data 
 # Monthly data 
 imports_xts = imports %>%  
@@ -574,6 +576,13 @@ imports_xts = imports %>%
 
 imports_xts <- imports_xts/(1000)
 
+# combine with Qscale
+Qscale_imports = merge(QScale, imports_xts, join = "inner" )
+Qscale_imports
+```
+
+
+```{r}
 #Trying to merge exportsTs to original data 
 # Monthly data 
 exports_xts = imports %>%  
@@ -591,14 +600,35 @@ exports_xts = imports %>%
 
 exports_xts <- exports_xts/(1000)
 
-# combine with Qscale
-Qscale_imports = merge(QScale, imports_xts, join = "inner" )
-Qscale_imports
-
 # combine with Qscale_imports
 Qscale_exports = merge(Qscale_imports, exports_xts, join = "inner" )
 Qscale_exports
-
-
 ```
+
+
+```{r}
+#Trying to merge rates Ts to original data 
+# Monthly data 
+rates_xts = rates %>%  
+  # find year, quarter, month, and month-in-quarter
+  mutate( Y = year( Date ), Q = quarter( Date ), 
+          index = yearqtr( Y + Q/4 ), 
+          M = month( Date ),
+          MinQ = paste( "cpiM", M%%3, sep="" ) ) %>%  
+  # spread monthly data into 3 columns one for each month-in-quarter
+  pivot_wider(id_cols = index, names_from = MinQ, 
+              values_from = VALUE ) %>% 
+  # take lag for M0
+  mutate( ratesM0 = lag(ratesM0) ) %>% 
+  xts( x=.[,c("ratesM0","ratesM1","ratesM2")], order.by =.$index)
+
+# combine with Qscale_imports
+Qscale_rates = merge(Qscale_exports, rates_xts, join = "inner" )
+Qscale_rates
+```
+
+
+
+
+
 
