Subsetted the data for month0, month01, month012 for the external data

--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -667,3 +667,40 @@ cpi_xts = cpi %>%
 Qscale_cpi = merge(Qscale_raw_mat, cpi_xts, join = "inner" )
 Qscale_cpi
 ```
+
+Now to subset the data
+```{r}
+# First we want all the month0 variables
+
+month0_ext <- Qscale_cpi[,c("Q","M0","importM0","exportM0","ratesM0","ippiM0","raw_matM0","cpiM0")]
+
+month0_ext <- na.fill(month0_ext, 0)
+
+month0_ext
+```
+
+
+```{r}
+# Now First we want all the month01 variables
+
+month01_ext <- Qscale_cpi[,c("Q","M0","M1","importM0","importM1",
+                             "exportM0","exportM1","ratesM0","ratesM1",
+                             "ippiM0","ippiM1","raw_matM0","raw_matM1","cpiM0","cpiM1")]
+
+month01_ext <- na.fill(month01_ext, 0)
+
+month01_ext
+```
+
+
+```{r}
+# Now First we want all the month01 variables
+
+month012_ext <- Qscale_cpi
+
+month01_ext <- na.fill(month01_ext, 0)
+
+month01_ext
+```
+
+
