--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -720,13 +720,13 @@ month012_ext <- Qscale_cpi
 
 #month01_ext <- na.fill(month01_ext, 0)
 
-month012_ext <- na.fill(month012_ext,0)
+(month012_ext <- na.fill(month012_ext,0))
 ```
 
 ```{r}
 # using step function to automate selection
 
-modelselect0 = lm(Q~M0+importM0+exportM0+ratesM0+ippiM0+raw_matM0+cpiM0, data = month0_ext)
+modelselect0 = lm(Q~M0+importM0+exportM0+ratesM0+ippiM0+raw_matM0+cpiM0, data = diff(month0_ext))
 summary(modelselect0)
 
 modelselect0.1 <- step(modelselect0, direction = "backward")
@@ -736,7 +736,7 @@ summary(modelselect0.1)
 
 
 ```{r}
-modelselect01 = lm(Q~M0+M1+importM0+importM1+exportM0+exportM1+ratesM0+ratesM1+ippiM0+ippiM1+raw_matM0+raw_matM1+cpiM0+cpiM1, data = month01_ext)
+modelselect01 = lm(Q~M0+M1+importM0+importM1+exportM0+exportM1+ratesM0+ratesM1+ippiM0+ippiM1+raw_matM0+raw_matM1+cpiM0+cpiM1, data = diff(month01_ext))
 summary(modelselect01)
 
 modelselect01.1 <- step(modelselect01, direction = "backward")
@@ -747,7 +747,7 @@ summary(modelselect01.1)
 
 
 ```{r}
-modelselect012 = lm(Q~M0+M1+M2+importM0+importM1+importM2+exportM0+exportM1+exportM2+ratesM0+ratesM1+ratesM2+ippiM0+ippiM1+ippiM2+raw_matM0+raw_matM1+raw_matM2+cpiM0+cpiM1+cpiM2, data = month012_ext)
+modelselect012 = lm(Q~M0+M1+M2+importM0+importM1+importM2+exportM0+exportM1+exportM2+ratesM0+ratesM1+ratesM2+ippiM0+ippiM1+ippiM2+raw_matM0+raw_matM1+raw_matM2+cpiM0+cpiM1+cpiM2, data = diff(month012_ext, lag = 1))
 summary(modelselect012)
 
 modelselect012.1 <- step(modelselect012, direction = "backward")
