--- a/NowCastingGDP.Rmd
+++ b/NowCastingGDP.Rmd
@@ -829,9 +829,9 @@ Arima012 <- function(df,p,d,q, regs) {
 
 
 ```{r}
-training0 = diff(month0_ext[1:64])
-testing0 = diff(month0_ext[64:90])
-month0arima <- arima_analysis(training0$Q,1,1,1,training01[,c("M0","importM0","cpiM0","raw_matM0")])
+training0 = month0_ext[1:64]
+testing0 = month0_ext[65:90]
+month0arima <- arima_analysis(training0$Q,1,1,1,training0[,c("M0","importM0","cpiM0","raw_matM0")])
 summary(month0arima)
 
 cast0 = forecast::forecast(month0arima, xreg = testing0[,c("M0","importM0","cpiM0","raw_matM0")])
